Fix issue with menu z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,12 +43,14 @@ body {
   position: relative;
   top: 80px;
   margin-right: 19%;
+  z-index: 999;
   /* width: 31%; */
 }
 
 .item-box-inner {
   border-top: 20px solid #5b352b;
 }
+
 
 .game-title {
   color: white;
